--- a/signup.html
+++ b/signup.html
@@ -124,7 +124,7 @@
                   } else {
                     var suparr=udata.concat(uarr);
                     localStorage.setItem("user", JSON.stringify(suparr));
-                    window.location.href="signin.html";
+                    window.location.href="index.html";
                   }
                 
               } else {
