--- a/app.html
+++ b/app.html
@@ -94,16 +94,17 @@
                                 <br>
                                 <input type="date" class="form-control" id="exdate" >
                                 <br>
-                                <button class="form-control btn btn-outline-danger justify-content-center" onclick="addexpens()">Expenses</button>
+                                <button class="form-control btn btn-outline-danger justify-content-center" onclick="addexpens()">Add Expenses</button>
                             </div>
                         </div>
                     </div>
                 </div>
+                
             </div>
             <!-- table -->
             <div class="container">
                 <div class="row mt-4">
-                    <div class="col col-sm-6 ">
+                    <div class="col col-sm-11 col-md-5 offset-sm-1">
                         <table class="table overflow-auto">
                             <thead>
                                 <tr class="text-center">
@@ -119,7 +120,7 @@
                             </tbody>
                         </table>
                     </div>
-                    <div class="col col-sm-6">
+                    <div class="col col-sm-12 col-md-5">
                         <table class="table overflow-auto">
                             <thead>
                                 <tr class="text-center">
